--- a/iMessage_Analysis.ipynb
+++ b/iMessage_Analysis.ipynb
@@ -4,8 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# iMessage analysis - Prepare data\n",
     "\n",
+    "# Paranoid analysis of iMessage chats with OpenAI, LlamaIndex & DuckDB\n",
+    "\n",
+    "Can I safely combine my local personal data with a public large language model to understand my texting behaviour? \n",
+    "\n",
+    "![](docs/arch.png)\n",
+    "\n",
+    "A project combining natural language and generative AI models to explore my private data without sharing (too much of) my personal life with the robots."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# iMessage analysis - Prepare data\n",
     "\n",
     "## Notebook for Fitbit data analysis with DuckDB\n",
     "Expected to be run in a notebook, DuckDB’s Python client can be used [directly in Jupyter notebook](https://duckdb.org/docs/guides/python/jupyter)\n",
