--- a/iMessage_Analysis.ipynb
+++ b/iMessage_Analysis.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "If you are on a Mac, logged into your iCloud account you can copy the local iMessage SQLite database and load it.\n",
     "\n",
-    "⏩ You can skip these steps - jump to [Generative AI with Pandas and LlamaIndex](#genai) if you just want to analyse some sample data"
+    "⏩ You can skip these steps - jump to [Generative AI with Pandas and LlamaIndex](#genaigo) if you just want to analyse some sample data"
    ]
   },
   {
@@ -291,7 +291,7 @@
    "source": [
     "# Generative AI with Pandas and LlamaIndex\n",
     "\n",
-    "<a id='genai'></a>\n",
+    "<a id='genaigo'></a>\n",
     "\n",
     "\n",
     "We'll be using [LlamaIndex](https://www.llamaindex.ai/) -  a flexible data framework for connecting custom data sources to large language models.\n",
@@ -341,7 +341,9 @@
    "source": [
     "## LlamaIndex\n",
     "\n",
-    "<a id='llamaindex'></a>\n"
+    "<a id='llamaindex'></a>\n",
+    "\n",
+    "![](./docs/00000001.png)"
    ]
   },
   {
@@ -383,7 +385,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Plot a bar chart showing the frequency by phone number"
+    "### 2. Plot a bar chart showing the frequency by phone number\n",
+    "\n",
+    "![](./docs/00000009.png)"
    ]
   },
   {
@@ -406,7 +410,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Distribution of the message activity through the day"
+    "### 3. Distribution of the message activity through the day\n",
+    "\n",
+    "![](./docs/00000008.png)"
    ]
   },
   {
@@ -431,7 +437,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. Distribution of the length of message"
+    "### 4. Distribution of the length of message\n",
+    "\n",
+    "![](./docs/00000010.png)"
    ]
   },
   {
