--- a/iMessage_Analysis.ipynb
+++ b/iMessage_Analysis.ipynb
@@ -251,44 +251,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Export the DataFrame to disk (optional)\n",
-    "This is optional - we can export the DataFrame to a CSV file."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "CREATE OR REPLACE TABLE SAMPLE_CHAT_MESSAGES\n",
-    "AS\n",
-    "SELECT message_date, is_from_me, phone_country_calling_code, phone_number, email\n",
-    ", translate(message_text, 'abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789', 'xxxxxxxxxxxxxxxxxxxxxxxxxxXXXXXXXXXXXXXXXXXXXXXXXXXXnnnnnnnnnn')  as message_text                \n",
-    "FROM chat_messages_df \n",
-    "WHERE EMAIL IS NULL;\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "COPY (\n",
-    "  SELECT *\n",
-    "  FROM SAMPLE_CHAT_MESSAGES\n",
-    "  USING SAMPLE 50\n",
-    "  ) \n",
-    "TO 'sample_chat_messages.csv' (HEADER, DELIMITER ',');"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Generative AI with Pandas and LlamaIndex\n",
     "\n",
     "<a id='genaigo'></a>\n",
@@ -343,7 +305,7 @@
     "\n",
     "<a id='llamaindex'></a>\n",
     "\n",
-    "![](./docs/00000001.png)"
+    "Be sure to setup an OpenAI API token save in `notebook.cfg` (copy `notebook-example.cfg`)"
    ]
   },
   {
@@ -456,6 +418,15 @@
     "    Add a title and label both axis. \n",
     "    Add a space between bars.\"\"\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Pie chart of the portion of is_from_me\n",
+    "\n",
+    "![](./docs/00000011.png)"
    ]
   },
   {
